# airpcez

./: .gitignore  Cargo.toml  airpcez.toml.example
.serena/: project.yml
crates/airpcez/: Cargo.toml
crates/airpcez-core/: Cargo.toml
crates/airpcez-core/src/: cluster.rs  flags.rs  lib.rs  model.rs  planner.rs  process.rs  profile.rs  stats.rs
crates/airpcez/assets/: index.html
crates/airpcez/src/: catalog.rs  config.rs  lib.rs  main.rs  poller.rs  server.rs  stats_macos.rs  stats_nvidia.rs  stats_provider.rs  supervisor.rs  version.rs
crates/airpcez/tests/: cluster_endpoint.rs  config.rs  config_endpoint.rs  host_health.rs  host_launch.rs  index_headers.rs  ipad_contract.rs  nodes_endpoint.rs  poller.rs  profiles_endpoint.rs  stats_endpoint.rs  suggest_endpoint.rs  supervisor.rs  worker_endpoint.rs  ws_stream.rs
crates/airpcez/tests/fixtures/: ipad_stats.json  nvidia-smi.csv  vm_stat.txt
docs/superpowers/plans/: 2026-06-25-airpcez-phase1-foundation.md  2026-06-25-airpcez-phase2-host.md  2026-06-25-airpcez-phase3-suggestion-engine.md  2026-06-26-airpcez-ipad-worker.md  2026-06-26-airpcez-live-config.md  2026-06-26-dashboard-pool-totals.md  2026-06-26-model-profiles.md  2026-06-26-planner-gpu-first-tiering.md
docs/superpowers/specs/: 2026-06-25-airpcez-design.md  2026-06-26-airpcez-ipad-worker-design.md  2026-06-26-dashboard-pool-totals-design.md  2026-06-26-model-profiles-design.md  2026-06-26-planner-gpu-first-tiering-design.md
ios/AirpcezWorker/: .gitignore
ios/AirpcezWorker/AirpcezWorker/: Budget.swift  (+9 more)
scripts/: build-llama-ios-xcframework.sh
(+8 files in other folders)
