[package]
name = "airpcez"
version = "0.1.0"
edition = "2021"

[dependencies]
airpcez-core = { path = "../airpcez-core" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sysinfo = "0.31"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
futures-util = "0.3"
tokio-tungstenite = "0.23"
